--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "prettier": "2.4.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,7 +50,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "prettier": "2.4.1"
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
   }
 }
