add: Husky config

--- a/package.json
+++ b/package.json
@@ -50,6 +50,11 @@
       "last 1 safari version"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
   }
