--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/uuid": "^8.3.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
